2017-09-19  Carlos Alberto Lopez Perez  <clopez@igalia.com>

        [CMake] Add ENABLE_WEB_CRYPTO option and make ENABLE_SUBTLE_CRYPTO depend on it.
        https://bugs.webkit.org/show_bug.cgi?id=177180

        Reviewed by Michael Catanzaro.

        This adds a ENABLE_WEB_CRYPTO flag and makes ENABLE_SUBTLE_CRYPTO depend on it.
        The GTK and WPE ports enable them and set ENABLE_WEB_CRYPTO to public.

        * Source/cmake/OptionsGTK.cmake: Set both features to ON and ENABLE_WEB_CRYPTO to public. No change in behaviour for GTK.
        * Source/cmake/OptionsWPE.cmake: Do like on the GTK port. The public flag is now ENABLE_WEB_CRYPTO.
        * Source/cmake/WebKitFeatures.cmake: Add the definition of ENABLE_WEB_CRYPTO and make ENABLE_SUBTLE_CRYPTO depend on it.

2017-09-07  Adrian Perez de Castro  <aperez@igalia.com>

        [WPE][CMake] Add "dist" and "distcheck" targets
        https://bugs.webkit.org/show_bug.cgi?id=176448

        Reviewed by Carlos Garcia Campos.

        Add "dist" and "distcheck" CMake targets, which create release tarballs.
        These are available only when configuring with -DDEVELOPER_MODE=TRUE.

        * Source/PlatformWPE.cmake: Added.
        * Source/cmake/FindXz.cmake: Added.

2017-09-05  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Wrong use of PLUGIN_ARCHITECTURE(X11) in several places
        https://bugs.webkit.org/show_bug.cgi?id=176329

        Reviewed by Michael Catanzaro.

        Only define MOZ_X11 if X11 target is enabled and always define XP_UNIX if NETSCAPE_PLUGIN_API is enabled.

        * Source/cmake/OptionsGTK.cmake:

2017-09-11  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update OptionsGTK.cmake and NEWS for 2.18.0 release.

        * Source/cmake/OptionsGTK.cmake: Bump version numbers.

2017-09-04  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update OptionsGTK.cmake and NEWS for 2.17.92 release.
