@@ -1,3 +1,12 @@
+2017-09-20  Alberto Garcia  <berto@igalia.com>
+
+        Fix HPPA and Alpha builds
+        https://bugs.webkit.org/show_bug.cgi?id=177224
+
+        Reviewed by Alex Christensen.
+
+        * wtf/Platform.h:
+
 2017-08-22  Chris Dumez  <cdumez@apple.com>
 
         Introduce a new CompletionHandler type and use it for NetworkDataTaskClient's completion handlers to help catch bugs
